--- a/IntershipTutor/WebContent/templates/candidati.ftl.html
+++ b/IntershipTutor/WebContent/templates/candidati.ftl.html
@@ -35,15 +35,20 @@
     <!-- Right Column -->
     <div class="w3-threequarter">
     
-      <div class="w3-padding w3-card w3-round w3-margin-bottom">
-        <h2 id="titolo-tirocinio" class="w3-text-grey w3-padding">
-        	<a href="offertaTirocinio?id_tirocinio=${offertaTirocinio.idTirocinio}">
-	        	<i class="fas fa-users fa-fw w3-margin-right w3-xlarge"></i>
-	        	${offertaTirocinio.titolo}
-        	</a>
-        </h2>
+		<!-- Including searchbar 
+			<#include "components/searchbar.ftl.html">
+		-->
+    
+      	<div class="w3-padding w3-card w3-round w3-margin-bottom">
+	        <h2 id="titolo-tirocinio" class="w3-text-grey w3-padding">
+	        	<a href="offertaTirocinio?id_tirocinio=${offertaTirocinio.idTirocinio}">
+		        	<i class="fas fa-users fa-fw w3-margin-right w3-xlarge"></i>
+		        	${offertaTirocinio.titolo}
+	        	</a>
+	        </h2>
         <#list candidatoTirocinio as candidato, tirocinio>
 			<hr />
+			<h2 class="w3-center">Candidatura</h2>
 			<div class="w3-padding w3-container offerta-container">
 				<h3 class="univaq-color">Informazioni sul candidato</h3>
 				<div class="dettagli">
@@ -76,36 +81,59 @@
 						<i class="fa fa-phone fa-fw w3-margin-right"></i>${candidato.telefono}
 					</p>
 				</div>
+				<br /><br />
 				<#if tirocinio.stato.name() == "attesa">
 					<hr />
-					<a class="w3-left" href="tirocinioStudente?codice_fiscale=${candidato.codiceFiscale}&stato=accettato&referrer=tirocinioStudente?id_tirocinio=${tirocinio.tirocinio}">
-						<button class="pointer w3-round w3-padding">	
+					<#if !offertaTirocinio.dataInizio?? || !offertaTirocinio.dataFine??>
+						<a class="w3-left" href="#accept-modal">
+					<#else>
+						<a href="tirocinioStudente?codice_fiscale=${candidato.codiceFiscale}&stato=accettato&referrer=tirocinioStudente?id_tirocinio=${tirocinio.tirocinio}">
+					</#if>
+						<button class="pointer w3-round">	
 							<i class="fas fa-check w3-margin-right"></i>
 							Accetta
 						</button>
 					</a>
 					<a class="w3-right" href="tirocinioStudente?codice_fiscale=${candidato.codiceFiscale}&stato=rifiutato&referrer=tirocinioStudente?id_tirocinio=${tirocinio.tirocinio}">
-						<button class="pointer w3-round w3-padding">
+						<button class="pointer w3-round">
 							<i class="fas fa-times w3-margin-right"></i>
 							Rifiuta
 						</button>
 					</a>
 				<#elseif tirocinio.stato.name() == "accettato">
-					<a class="w3-right" href="tirocinioStudente?codice_fiscale=${candidato.codiceFiscale}&stato=terminato&referrer=tirocinioStudente?id_tirocinio=${tirocinio.tirocinio}">
-						<button class="pointer w3-round w3-padding">
+					<a class="w3-right" href="#conclude-modal-${candidato.codiceFiscale}">
+						<button class="pointer w3-round">
 							<i class="fas fa-times w3-margin-right"></i>
 							Termina
 						</button>
 					</a>
+					<a class="w3-left" href="download?codice_fiscale=${candidato.utente}">
+						<button class="pointer w3-round">
+							<i class="fas fa-download w3-margin-right"></i>
+							Progetto formativo
+						</button>
+					</a>
 				<#elseif tirocinio.stato.name() == "terminato">
-					<p class="w3-right univaq-color">Il tirocinio si è concluso</p>
+					<p class="w3-right univaq-color w3-padding no-margin">
+						Il tirocinio è concluso
+					</p>
+					<a class="w3-left" href="download?codice_fiscale=${candidato.utente}">
+						<button class="pointer w3-round">
+							<i class="fas fa-download w3-margin-right"></i>
+							Progetto formativo
+						</button>
+					</a>
 				<#else>
-					<p class="w3-right w3-text-gray">L'offerta è stata rifiutata</p>
+					<p class="w3-right w3-text-gray">Il candidato è stato respinto</p>
 				</#if>
 			</div>
 		</#list>
-
+		
 	</div>
+	
+	<!-- Pagination -->
+	<#include "components/pagination.ftl.html">
+	
     <!-- End Right Column -->
     </div>
     
@@ -118,39 +146,92 @@
 <!-- Modals -->
 <!-- Update intership modal -->
 <div id="update-intership-modal" class="overlay">
-	    <div class="w3-card w3-white w3-round popup w3-padding">
+    <div class="w3-card w3-white w3-round popup w3-padding">
+
+	      <div class="w3-center"><br>
+	      	<a href="#close" class="w3-button w3-xlarge w3-display-topright">&times;</a>
+	        <h2>Aggiungi tirocinio</h2>
+	      </div>
+	      <form class="w3-container" action="offertaTirocinio?referrer=tirocinioStudente?id_tirocinio=${offertaTirocinio.idTirocinio}" method="post">
+	        <div class="w3-section">
+	          <!-- The idTirocinio is hidden, it is used on the server -->
+	          <input type="hidden" name="id_tirocinio" value="${offertaTirocinio.idTirocinio}" />
+	          <label for="titoloOffertaTirocinio"><b>Titolo</b></label>
+	          <input id="titoloOffertaTirocinio" class="w3-input w3-border-bottom w3-margin-bottom" maxlength="255" type="text" placeholder="Inserisci una breve descrizione" name="titolo" value="${offertaTirocinio.titolo}" autocomplete="off" required />
+	          <label for="luogoOffertaTirocinio"><b>Luogo</b></label>
+	          <input id="luogoOffertaTirocinio" class="w3-input w3-border-bottom w3-margin-bottom" maxlength="45" type="text" placeholder="Inserisci il luogo in cui avverrà il tirocinio" name="luogo" value="${offertaTirocinio.luogo}" autocomplete="off" required />
+	          <label for="obiettivi"><b>Obiettivi</b></label>
+			  <textarea id="obiettivi" class="w3-input w3-border-bottom w3-margin-bottom" maxlength="2500" placeholder="Inserisci gli obiettivi da raggiungere" name="obiettivi" autocomplete="off" required>${offertaTirocinio.obiettivi}</textarea>
+			  <label for="modalita"><b>Modalit&agrave;</b></label>
+			  <textarea id="modalita" class="w3-input w3-border-bottom w3-margin-bottom" maxlength="2500" placeholder="Inserisci le modalita con cui verrà effettuato il tirocinio" name="modalita" autocomplete="off" required>${offertaTirocinio.modalita}</textarea>
+			  <label for="rimborso"><b>Rimborso</b></label>
+			  <input id="rimborso" class="w3-input w3-border-bottom w3-margin-bottom" maxlength="255" type="number" placeholder="Inserisci l'importo del rimborso se previsto" <#if offertaTirocinio.rimborso??>value="${offertaTirocinio.rimborso}"</#if> name="rimborso" />
+			  <label for="dataInizio"><b>Data inizio</b></label>
+			  <input id="dataInizio" class="w3-input w3-border-bottom w3-margin-bottom" type="date" placeholder="Inserisci la data di inizio del tirocinio" name="data_inizio" <#if offertaTirocinio.dataInizio??> value="${offertaTirocinio.dataInizio?iso_local}"</#if> autocomplete="off" />
+			  <label for="dataFine"><b>Data fine</b></label>
+			  <input id="dataFine" class="w3-input w3-border-bottom w3-margin-bottom" type="date" placeholder="Inserisci la data in cui si concluderà il tirocinio" name="data_fine" <#if offertaTirocinio.dataFine??> value="${offertaTirocinio.dataFine?iso_local}"</#if> autocomplete="off" />
+			  <label for="oraInizio"><b>Ora inizio</b></label>
+			  <input id="oraInizio" class="w3-input w3-border-bottom w3-margin-bottom" type="time" placeholder="Inserisci l'orario di inizio" <#if offertaTirocinio.oraFine??> value="${offertaTirocinio.oraInizio?iso_local[0..4]}"</#if> name="ora_inizio" />					  
+	          <label for="oraFine"><b>Ora fine</b></label>
+         	  <input id="oraFine" class="w3-input w3-border-bottom w3-margin-bottom" type="time" placeholder="Inserisci l'orario di fine" <#if offertaTirocinio.oraFine??>value="${offertaTirocinio.oraFine?iso_local[0..4]}"</#if> name="ora_fine" />
+         	  <label for="numeroOre"><b>Numero ore</b></label>
+         	  <input id="numeroOre" class="w3-input w3-border-bottom w3-margin-bottom" maxlength="5" type="number" placeholder="Inserisci il numero di ore previste per il tirocinio" name="numero_ore" value="${offertaTirocinio.numeroOre}" autocomplete="off" required />
+          	  <button class="w3-button w3-block w3-section w3-padding univaq-color-background" type="submit" name="aggiorna" value="aggiorna">Aggiorna</button>
+	        </div>
+	      </form>
+      </div>
+</div>
 	
+<!-- Conclude intership modals -->
+<#list candidatoTirocinio as candidato, offerta>
+	<div id="conclude-modal-${candidato.codiceFiscale}" class="overlay">
+		    <div class="w3-card w3-white w3-round popup w3-padding">
 		      <div class="w3-center"><br>
 		      	<a href="#close" class="w3-button w3-xlarge w3-display-topright">&times;</a>
-		        <h2>Aggiungi tirocinio</h2>
+		        <h2>Concludi il tirocinio</h2>
 		      </div>
-		      <form class="w3-container" action="offertaTirocinio?referrer=tirocinioStudente?id_tirocinio=${offertaTirocinio.idTirocinio}" method="post">
+		      <form class="w3-container" action="tirocinioStudente?referrer=tirocinioStudente?id_tirocinio=${offerta.tirocinio}" method="post">
 		        <div class="w3-section">
-		          <!-- The idTirocinio is hidden, it is used on the server -->
-		          <input type="hidden" name="id_tirocinio" value="${offertaTirocinio.idTirocinio}" />
-		          <label for="titoloOffertaTirocinio"><b>Titolo</b></label>
-		          <input id="titoloOffertaTirocinio" class="w3-input w3-border-bottom w3-margin-bottom" maxlength="255" type="text" placeholder="Inserisci una breve descrizione" name="titolo" value="${offertaTirocinio.titolo}" autocomplete="off" required />
-		          <label for="luogoOffertaTirocinio"><b>Luogo</b></label>
-		          <input id="luogoOffertaTirocinio" class="w3-input w3-border-bottom w3-margin-bottom" maxlength="45" type="text" placeholder="Inserisci il luogo in cui avverrà il tirocinio" name="luogo" value="${offertaTirocinio.luogo}" autocomplete="off" required />
-		          <label for="obiettivi"><b>Obiettivi</b></label>
-				  <textarea id="obiettivi" class="w3-input w3-border-bottom w3-margin-bottom" maxlength="2500" placeholder="Inserisci gli obiettivi da raggiungere" name="obiettivi" autocomplete="off" required>${offertaTirocinio.obiettivi}</textarea>
-				  <label for="modalita"><b>Modalit&agrave;</b></label>
-				  <textarea id="modalita" class="w3-input w3-border-bottom w3-margin-bottom" maxlength="2500" placeholder="Inserisci le modalita con cui verrà effettuato il tirocinio" name="modalita" autocomplete="off" required>${offertaTirocinio.modalita}</textarea>
-				  <label for="rimborso"><b>Rimborso</b></label>
-				  <input id="rimborso" class="w3-input w3-border-bottom w3-margin-bottom" maxlength="255" type="number" placeholder="Inserisci l'importo del rimborso se previsto" <#if offertaTirocinio.rimborso??>value="${offertaTirocinio.rimborso}"</#if> name="rimborso" />
-				  <label for="dataInizio"><b>Data inizio</b></label>
-				  <input id="dataInizio" class="w3-input w3-border-bottom w3-margin-bottom" type="date" placeholder="Inserisci la data di inizio del tirocinio" name="data_inizio" <#if offertaTirocinio.dataInizio??> value="${offertaTirocinio.dataInizio?iso_local}"</#if> autocomplete="off" />
-				  <label for="dataFine"><b>Data fine</b></label>
-				  <input id="dataFine" class="w3-input w3-border-bottom w3-margin-bottom" type="date" placeholder="Inserisci la data in cui si concluderà il tirocinio" name="data_fine" <#if offertaTirocinio.dataFine??> value="${offertaTirocinio.dataFine?iso_local}"</#if> autocomplete="off" />
-				  <label for="oraInizio"><b>Ora inizio</b></label>
-				  <input id="oraInizio" class="w3-input w3-border-bottom w3-margin-bottom" type="time" placeholder="Inserisci l'orario di inizio" <#if offertaTirocinio.oraFine??> value="${offertaTirocinio.oraInizio?iso_local[0..4]}"</#if> name="ora_inizio" />					  
-		          <label for="oraFine"><b>Ora fine</b></label>
-	         	  <input id="oraFine" class="w3-input w3-border-bottom w3-margin-bottom" type="time" placeholder="Inserisci l'orario di fine" <#if offertaTirocinio.oraFine??>value="${offertaTirocinio.oraFine?iso_local[0..4]}"</#if> name="ora_fine" />
-	         	  <label for="numeroOre"><b>Numero ore</b></label>
-	         	  <input id="numeroOre" class="w3-input w3-border-bottom w3-margin-bottom" maxlength="5" type="number" placeholder="Inserisci il numero di ore previste per il tirocinio" name="numero_ore" value="${offertaTirocinio.numeroOre}" autocomplete="off" required />
-	          	  <button class="w3-button w3-block w3-section w3-padding univaq-color-background" type="submit" name="aggiorna" value="aggiorna">Aggiorna</button>
+		        	<input type="hidden" name="codice_fiscale" value="${candidato.codiceFiscale}" />
+					<label for="descrizioneDettagliata"><b>Descrizione dettagliata</b></label>
+	          		<textarea id="descrizioneDettagliata" class="w3-input w3-border-bottom w3-margin-bottom" maxlength="2000" type="text" placeholder="Inserisci una descrizione dettagliata sull'attività svolta" name="descrizione_dettagliata" autocomplete="off" required></textarea>
+			        <label for="oreSvolte"><b>Ore svolte</b></label>
+			        <input id="oreSvolte" class="w3-input w3-border-bottom w3-margin-bottom" maxlength="11" type="number" placeholder="Inserisci le ore svolte" name="ore_svolte" autocomplete="off" required />
+			        <label for="giudizioFinale"><b>Giudizio finale</b></label>
+			        <input id="giudizioFinale" class="w3-input w3-border-bottom w3-margin-bottom" maxlength="2000" type="text" placeholder="Inserisci un giudizio finale" name="giudizio_finale" autocomplete="off" required />
+					<button class="w3-button w3-block w3-section w3-padding univaq-color-background" type="submit" name="concludi" value="concludi">Concludi</button>
 		        </div>
 		      </form>
 	      </div>
 	</div>
-	
+</#list>
+
+<div id="accept-modal" class="overlay">
+	    <div class="w3-card w3-white w3-round popup w3-padding">
+	      <div class="w3-center"><br>
+	      	<a href="#close" class="w3-button w3-xlarge w3-display-topright">&times;</a>
+	        <h2>Aggiungi il periodo di svolgimento</h2>
+	      </div>
+	      <form class="w3-container" action="offertaTirocinio?referrer=tirocinioStudente?id_tirocinio=${offertaTirocinio.idTirocinio}" method="post">
+	        <div class="w3-section">
+	          <!-- Theese infos are hidden, they are used on the server -->
+          	  <input type="hidden" name="id_tirocinio" value="${offertaTirocinio.idTirocinio}" />
+          	  <input type="hidden" name="titolo" value="${offertaTirocinio.titolo}" />
+          	  <input type="hidden" name="luogo" value="${offertaTirocinio.luogo}" />
+          	  <input type="hidden" name="obiettivi" value="${offertaTirocinio.obiettivi}" />
+          	  <input type="hidden" name="modalita" value="${offertaTirocinio.modalita}" />
+          	  <input type="hidden" name="rimborso" <#if offertaTirocinio.rimborso??>value="${offertaTirocinio.rimborso}"<#else>value="0"</#if> />
+          	  <input type="hidden" name="numero_ore" value="${offertaTirocinio.numeroOre}" />
+			  <label for="dataInizio-${offertaTirocinio.idTirocinio}"><b>Data inizio</b></label>
+			  <input id="dataInizio-${offertaTirocinio.idTirocinio}" class="w3-input w3-border-bottom w3-margin-bottom" type="date" placeholder="Inserisci la data di inizio del tirocinio" name="data_inizio" <#if offertaTirocinio.dataInizio??> value="${offertaTirocinio.dataInizio?iso_local}"</#if> autocomplete="off" required />
+			  <label for="dataFine-${offertaTirocinio.idTirocinio}"><b>Data fine</b></label>
+			  <input id="dataFine-${offertaTirocinio.idTirocinio}" class="w3-input w3-border-bottom w3-margin-bottom" type="date" placeholder="Inserisci la data in cui si concluderà il tirocinio" name="data_fine" <#if offertaTirocinio.dataFine??> value="${offertaTirocinio.dataFine?iso_local}"</#if> autocomplete="off" required />
+			  <label for="oraInizio-${offertaTirocinio.idTirocinio}"><b>Ora inizio</b></label>
+			  <input id="oraInizio-${offertaTirocinio.idTirocinio}" class="w3-input w3-border-bottom w3-margin-bottom" type="time" placeholder="Inserisci l'orario di inizio" <#if offertaTirocinio.oraFine??> value="${offertaTirocinio.oraInizio?iso_local[0..4]}"</#if> name="ora_inizio" />					  
+	          <label for="oraFine-${offertaTirocinio.idTirocinio}"><b>Ora fine</b></label>
+         	  <input id="oraFine-${offertaTirocinio.idTirocinio}" class="w3-input w3-border-bottom w3-margin-bottom" type="time" placeholder="Inserisci l'orario di fine" <#if offertaTirocinio.oraFine??>value="${offertaTirocinio.oraFine?iso_local[0..4]}"</#if> name="ora_fine" />
+          	  <button class="w3-button w3-block w3-section w3-padding univaq-color-background" type="submit" name="aggiorna" value="aggiorna">Modifica</button>
+	        </div>
+	      </form>
+      </div>
+</div>
