--- a/IntershipTutor/WebContent/templates/homepage-anonimo.ftl.html
+++ b/IntershipTutor/WebContent/templates/homepage-anonimo.ftl.html
@@ -38,26 +38,8 @@
 	   <!-- Middle Column -->
 	   <div class="w3-threequarter" id="right-column">
 	
-	         <div id="search-bar">
-	             <div class="w3-card w3-round padding-edge">
-	                 <div class="w3-container intership">
-	                     <div class="search-form collapsible-menu">
-	                      <input type="checkbox" id="menu" />
-	                      <label id="label-search" for="menu">Filtra le proposte di tirocinio</label>
-	                      <div class="menu-content">
-	                          <br /><br />
-	                          <form action="." method="get">
-		                          <#list campiRicerca as campoRicerca>
-		                              <label class="field-filter">${campoRicerca?capitalize}</label>
-		                              <input name="${campoRicerca}" class="w3-input" autocomplete="off" />
-		                          </#list>
-		                          <button type="submit" class="w3-button w3-right w3-border w3-round">Cerca</button>
-	                          </form>
-	                      </div>
-	                 	</div>
-	             	</div>
-	         	</div>
-	     	</div>
+	       <!-- Including searchbar -->
+	       <#include "components/searchbar.ftl.html">
 	       
 	       <div id="offerte-container" class="w3-margin-top w3-margin-bottom w3-card w3-round w3-padding">
 				<h2 id="tirocini-disponibili" class=" w3-padding w3-text-grey">
