--- a/IntershipTutor/WebContent/templates/homepage-anonimo.ftl.html
+++ b/IntershipTutor/WebContent/templates/homepage-anonimo.ftl.html
@@ -78,8 +78,7 @@
 						    </#if>
 						</p>
 						<a href="#access-manager-modal">
-							<button class="w3-button w3-right w3-round">
-								<i class="far fa-share-square fa-fw w3-margin-right"></i>
+							<button class="w3-button w3-right w3-round far fa-share-square">
 								Invia proposta
 							</button>
 						</a>
