Added back-office functionalities

--- a/IntershipTutor/WebContent/templates/components/searchbar.ftl.html
+++ b/IntershipTutor/WebContent/templates/components/searchbar.ftl.html
@@ -1,4 +1,4 @@
-<div id="search-bar">
+<div id="search-bar" class="w3-animate-right">
     <div class="w3-card w3-round padding-edge">
         <div class="w3-container intership">
             <div class="search-form collapsible-menu">
