--- a/IntershipTutor/WebContent/templates/dettaglio-azienda.ftl.html
+++ b/IntershipTutor/WebContent/templates/dettaglio-azienda.ftl.html
@@ -5,7 +5,7 @@
   <div class="w3-row-padding">
   
     <!-- Left Column -->
-    <div class="w3-quarter">
+    <div class="w3-quarter w3-animate-left">
     
       <div class="w3-card w3-round">
         <div class="padding-edge padding-bottom">
@@ -58,7 +58,7 @@
     </div>
 
     <!-- Right Column -->
-    <div class="w3-threequarter">
+    <div class="w3-threequarter w3-animate-bottom">
     
       <div class="w3-padding w3-card w3-round w3-margin-bottom">
         <h2 id="tirocini-disponibili" class="w3-text-grey w3-padding">
