--- a/IntershipTutor/WebContent/templates/tirocini-conclusi.ftl.html
+++ b/IntershipTutor/WebContent/templates/tirocini-conclusi.ftl.html
@@ -6,7 +6,7 @@
   <div class="w3-row-padding">
   
     <!-- Left Column -->
-	   <div class="w3-quarter" id="left-column">
+	   <div class="w3-quarter w3-animate-left" id="left-column">
 	       <!-- Profile -->
 		       <div class="w3-card w3-round">
 		           <div class="w3-container profile-container w3-margin-bottom">
@@ -26,7 +26,7 @@
 	   <!-- End Left Column -->
 
     <!-- Right Column -->
-    <div class="w3-threequarter">
+    <div class="w3-threequarter w3-animate-bottom">
     
 		<!-- Including searchbar: add # before include
 			<include "components/searchbar.ftl.html">
