--- a/IntershipTutor/WebContent/templates/candidati.ftl.html
+++ b/IntershipTutor/WebContent/templates/candidati.ftl.html
@@ -6,7 +6,7 @@
   <div class="w3-row-padding">
   
     <!-- Left Column -->
-	   <div class="w3-quarter" id="left-column">
+	   <div class="w3-quarter w3-animate-left" id="left-column">
 	       <!-- Profile -->
 		       <div class="w3-card w3-round">
 		           <div class="w3-container profile-container w3-margin-bottom">
@@ -33,7 +33,7 @@
 	   <!-- End Left Column -->
 
     <!-- Right Column -->
-    <div class="w3-threequarter">
+    <div class="w3-threequarter w3-animate-bottom">
     
 		<!-- Including searchbar: add # before include
 			<include "components/searchbar.ftl.html">
@@ -112,7 +112,6 @@
 						<form action="upload?utente=${candidato.utente}&referrer=tirocinioStudente?id_tirocinio=${offertaTirocinio.idTirocinio}" method="post" enctype='multipart/form-data'>
 						    <input class="w3-padding w3-margin-top" type="file" name="file" />
 						    <button id="send" class="w3-button pointer fas fa-upload w3-round " type="submit" > Carica documento</button>
-						    
 						</form>
 					</div>
 				<#elseif tirocinio.stato.name() == "terminato">
