--- a/IntershipTutor/WebContent/templates/homepage-azienda.ftl.html
+++ b/IntershipTutor/WebContent/templates/homepage-azienda.ftl.html
@@ -5,7 +5,7 @@
   <div class="w3-row-padding">
 
 	   <!-- Left Column -->
-	   <div class="w3-quarter" id="left-column">
+	   <div class="w3-quarter w3-animate-left" id="left-column">
 	       <!-- Profile -->
 		       <div class="w3-card w3-round">
 		           <div class="w3-container profile-container w3-margin-bottom">
@@ -64,7 +64,7 @@
 	   <!-- End Left Column -->
 	
 	   <!-- Middle Column -->
-	   <div class="w3-threequarter" id="right-column">
+	   <div class="w3-threequarter w3-animate-bottom" id="right-column">
 	
 	        <!-- Including searchbar 
 				<#include "components/searchbar.ftl.html">
