--- a/IntershipTutor/WebContent/templates/candidati.ftl.html
+++ b/IntershipTutor/WebContent/templates/candidati.ftl.html
@@ -190,7 +190,7 @@
 		      	<a href="#close" class="w3-button w3-xlarge w3-display-topright">&times;</a>
 		        <h2>Concludi il tirocinio</h2>
 		      </div>
-		      <form class="w3-container" action="tirocinioStudente?referrer=tirocinioStudente?id_tirocinio=${offerta.tirocinio}" method="post">
+		      <form class="w3-container" action="tirocinioStudente?stato=terminato&referrer=tirocinioStudente?id_tirocinio=${offerta.tirocinio}" method="post">
 		        <div class="w3-section">
 		        	<input type="hidden" name="codice_fiscale" value="${candidato.codiceFiscale}" />
 					<label for="descrizioneDettagliata"><b>Descrizione dettagliata</b></label>
