Removed active function for the admin

--- a/IntershipTutor/WebContent/templates/candidati.ftl.html
+++ b/IntershipTutor/WebContent/templates/candidati.ftl.html
@@ -6,7 +6,8 @@
   <div class="w3-row-padding">
   
     <!-- Left Column -->
-	   <div class="w3-quarter w3-animate-left" id="left-column">
+    	<!-- w3-animate-left -->
+	   <div class="w3-quarter" id="left-column">
 	       <!-- Profile -->
 		       <div class="w3-card w3-round">
 		           <div class="w3-container profile-container w3-margin-bottom">
@@ -33,7 +34,8 @@
 	   <!-- End Left Column -->
 
     <!-- Right Column -->
-    <div class="w3-threequarter w3-animate-bottom">
+    <!-- w3-animate-bottom -->
+    <div class="w3-threequarter">
     
 		<!-- Including searchbar: add # before include
 			<include "components/searchbar.ftl.html">
