--- a/IntershipTutor/WebContent/templates/homepage-anonimo.ftl.html
+++ b/IntershipTutor/WebContent/templates/homepage-anonimo.ftl.html
@@ -7,7 +7,8 @@
 	   <!-- Left Column -->
 	   <div class="w3-quarter" id="left-column">
 	
-	       <div id="aziende-convenzionate-container" class="w3-card w3-round w3-animate-left">
+		   <!-- w3-animate-left -->
+	       <div id="aziende-convenzionate-container" class="w3-card w3-round">
 	           <h2 id="aziende-convenzionate">Aziende convenzionate</h2>
 	           <div class="w3-container" id="aziende-container">
 	               <#list aziende as azienda>
@@ -41,7 +42,8 @@
 	       <!-- Including searchbar -->
 	       <#include "components/searchbar.ftl.html">
 	       
-	       <div id="offerte-container" class="w3-margin-top w3-margin-bottom w3-card w3-round w3-padding w3-animate-bottom">
+	       <!-- w3-animate-bottom -->
+	       <div id="offerte-container" class="w3-margin-top w3-margin-bottom w3-card w3-round w3-padding">
 				<h2 id="tirocini-disponibili" class=" w3-padding w3-text-grey">
 					<i class="fas fa-list-ul fa-fw w3-margin-right w3-xlarge"></i>
 					Tirocini disponibili
