--- a/IntershipTutor/WebContent/templates/homepage-studente.ftl.html
+++ b/IntershipTutor/WebContent/templates/homepage-studente.ftl.html
@@ -5,7 +5,8 @@
   <div class="w3-row-padding">
 
 	   <!-- Left Column -->
-	   <div class="w3-quarter w3-animate-left" id="left-column">
+	   <!-- w3-animate-left -->
+	   <div class="w3-quarter" id="left-column">
 	       <!-- Profile -->
 		       <div class="w3-card w3-round">
 		           <div class="w3-container profile-container w3-margin-bottom">
@@ -97,7 +98,8 @@
 		           </div>
 		       </div>
 	
-	       <div id="aziende-convenzionate-container w3-animate-left" class="w3-card w3-round">
+		   <!-- w3-animate-left -->
+	       <div id="aziende-convenzionate-container" class="w3-card w3-round">
 	           <h2 id="aziende-convenzionate">Aziende convenzionate</h2>
 	           <div class="w3-container" id="aziende-container">
 	               <#list aziende as azienda>
@@ -126,7 +128,8 @@
 	   <!-- End Left Column -->
 	
 	   <!-- Middle Column -->
-	   <div class="w3-threequarter w3-animate-bottom" id="right-column">
+	   <!-- w3-animate-bottom -->
+	   <div class="w3-threequarter" id="right-column">
 	
 	        <!-- Including searchbar -->
 			<#include "components/searchbar.ftl.html">
